# spacebar-editor

./: .env.example  .gitignore  ARCHITECTURE.md  COMPARISON.md  OVERVIEW.md  README.md  assessment.md  components.json  extension.md  index.html  package-lock.json  package.json  pnpm-lock.yaml  rust-toolchain.toml  settings.html  spec.md  test-chips.mjs  test-inspector.mjs  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
.pnpm-store/v11/: index.db
docs/: SECRETS.md  TINYLLAMA_TERAX_INSPIRED_SPEC.md
docs/architecture/: ARCHITECTURE.md
docs/overview/: OVERVIEW.md
docs/specs/: 01-product.md  02-technology.md  03-architecture.md  04-entry-points.md  05-workbench.md  06-state-management.md  08-ai-agent.md  09-tool-system.md  10-editor.md  11-git.md  13-theming.md  14-security.md  15-testing.md  16-build.md  17-roadmap.md  18-glossary.md  19-planning-system.md  20-editor-formatting-and-theming.md  21-context-compaction.md  22-llm-file-interaction.md  23-skills-system.md  24-filesystem-watcher.md  25-lsp-diagnostics.md  26-search-panel.md  27-local-model-ux.md  28-inline-edit-autocomplete.md  29-skills-registry.md  30-agent-context-and-model-settings.md  31-llm-eval-harness.md  33-rust-path-enforcement.md  35-workspace-lock.md  36-first-run-onboarding.md  37-shortcut-rebinding.md  38-parallel-tool-execution.md  40-product-hardening-and-agent-ux.md  41-lsp-agent-tools.md  42-mlx-provider.md  43-v-next-release-fixes.md  44-editor-actions-browser-tab.md  45-security-hardening-and-capability-expansion.md  (+12 more)
packaging/arch/: PKGBUILD
packaging/homebrew/: README.md  spacebar-editor.rb
scripts/: free-dev-port.mjs  install-cli.mjs  publish-homebrew-tap.sh  pull-recommended-ollama.sh  release.mjs  spacebar-cli.sh  sync-homebrew-tap.mjs  tauri-dev.mjs  update-homebrew-cask.mjs
src/: App.svelte  main.ts  settings-main.ts
src-tauri/: Cargo.toml  tauri.conf.json  tauri.macos.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
src-tauri/src/modules/: commands.rs  filesystem.rs  git.rs  lsp.rs  macos_dock.rs  mod.rs  pty.rs  secrets.rs  sidecar.rs  watcher.rs  window_state.rs
src/lib/: agentCompaction.ts  agentLimits.ts  apiSecrets.ts  appUpdate.ts  chatFooterProfile.ts  chatModelMenu.ts  cloudModelCatalog.ts  compactionModel.ts  contextBudget.ts  crashRestore.ts  envApiKeys.ts  explorerPanel.ts  feedback.ts  filesystemSync.ts  fsPath.ts  inferenceOptions.ts  ipc.ts  modelRoles.ts  modelSettings.ts  ollamaClient.ts  onboarding.ts  projectState.ts  projectTools.ts  providerBalance.ts  providerHealth.ts  providerServerConfig.ts  readFileCap.ts  shellPolicy.ts  textEscapes.ts  toolPolicy.ts  utils.ts  webAccess.ts  windowControls.ts  workbench-theme.ts  workspace.ts  workspaceTrust.ts
src/styles/: editor-syntax.css  globals.css  (+2 more)
tests/: README.md
(+222 files in other folders)
