[package]
name = "sidebar"
version = "0.1.2"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rfd = "0.15"
notify = { version = "6" }
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
git2 = { version = "0.20", default-features = false }
ignore = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
flate2 = "1"
zip = "2"
keyring = { version = "3", features = ["apple-native", "linux-native", "windows-native"] }
dunce = "1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = true
