[package]
name = "sidebar"
version = "0.1.15"
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
rfd = "0.15"
notify = { version = "6" }
portable-pty = "0.9"
uuid = { version = "1", features = ["v4"] }
git2 = { version = "0.20", default-features = false }
ignore = "0.4"
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "blocking"] }
flate2 = "1"
zip = "2"
dunce = "1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-process = "2.3.1"

[profile.release]
panic = "abort"
codegen-units = 1
lto = "thin"
opt-level = "s"
strip = true

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSApplication",
    "NSMenu",
    "NSMenuItem",
    "NSResponder",
] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSObject",
    "NSString",
] }
